let dev define position to avoid z-index confusion

--- a/packages/components-web/src/components/core-badge/core-badge.less
+++ b/packages/components-web/src/components/core-badge/core-badge.less
@@ -3,7 +3,6 @@
 // `:host` targets the custom element compiled by Stencil
 :host {
   display: inline-flex;
-  position: relative;
   vertical-align: middle;
 
   // @Prop color
